test/error/FieldInitThrows.ci
public class Test
{
	static int Foo() throws => 42;

	int Bar = Foo(); //ERROR: Cannot call method Foo here because it is marked 'throws'
}
